--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "deployer/dist": "~6.8.0"
+    "deployer/deployer": "^7.0.0"
   },
   "autoload": {
     "psr-4": {
